[metadata]
description = A light-weight wrapper to run Jug with GridMap on a Grid Engine cluster
author = Andreas Sorge
author_email = gridjug@asorge.de
license = isc
url = http://gridjug.readthedocs.org
# Comma separated list of data INSIDE your package to include.
# DO NOT prepend the package name when specifying files and folders.
package_data = 
# Comma separated list of data OUTSIDE your package to include.
# Equivalent to adding files to MANIFEST.in which is not needed.
data_files = *.rst, *.txt
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers = Development Status :: 3 - Alpha,
              Intended Audience :: Science/Research,
              License :: OSI Approved :: ISC License (ISCL),
              Programming Language :: Python,
              Programming Language :: Python :: 2.7,
              Programming Language :: Python :: 3.4,
              Topic :: Scientific/Engineering

[console_scripts]
# Add here console scripts like:
# hello_world = gridjug.module:function
